@@ -3,6 +3,7 @@ Revised so that the constant hyperparameter is independent of the training data 
 Bugfix for kbest oracle for taking unique
 Evaluator can take directory input
 Oraclue computer memorize the best-so-forth results, instead of the previously best
+Compact memory consumption in parse-{cky,tree,tree-cky}
 
 2011-6-27
 Serious bugfix for parse-{cky,tree,tree-cky} where the features from source lattice/forest(s) are completely ignored for pruning.
